--- a/index.html
+++ b/index.html
@@ -6,14 +6,158 @@
     <meta name="author" content="jouw naam">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Howdy</title>
+    <title>Notebook Therapy</title>
 
     <link href="styles/style.css" rel="stylesheet">
 </head>
 
 <body>
-    <h1>Howdy</h1>
-    <script src="scripts/script.js"></script>
-</body>
+    <header>
+        <h1>Notebook Therapy</h1>
+    </header>
+    <nav>
 
-</html>
+    </nav>
+    <main>
+        <section>
+            <h3>trending now</h3>
+            <article>
+                <img src="images/trending_now/product-image-538700474_300x.jpg" alt="double_sided_highlighters">
+                <h4>Double Sided 'Mildliner' Style Highlighter - Set of 12</h4>
+                <p>€21.11 EUR €18.57 EUR</p>
+            </article>
+            <article>
+                <img src="images/trending_now/main_300x.jpg" alt="pencil_case">
+                <h4>Tsuki Pop-up Pencil Case</h4>
+                <p>€18.57 EUR €16.88 EUR</p>
+            </article>
+            <article>
+                <img src="images/trending_now/pastelproduct-crop1_300x.png" alt="pastel_bulletjournal">
+                <h4>Tsuki 'Pastel Edition' Bullet Journal</h4>
+                <p>€19.42 EUR</p>
+            </article>
+            <article>
+                <img src="images/trending_now/stamp1-min_300x.jpg" alt="stamp_set">
+                <h4>Tsuki Bullet Journal Tracking Stamp Set</h4>
+                <p>€32.09 EUR</p>
+            </article>
+            <article>
+                <img src="images/trending_now/d1e57ac3375c0ca5181c91d343e7d747_300x.png" alt="cord_tote_bag">
+                <h4>Cord Tote Bag</h4>
+                <p>€28.72 EUR €20.26 EUR</p>
+            </article>
+            <article>
+                <img src="images/trending_now/moonflower12-1_300x.png" alt="moonflower_bulletjournal">
+                <h4>Tsuki 'Moonflower' Limited Edition Luxury Bullet Journal</h4>
+                <p>€24.49 EUR</p>
+            </article>
+            <article>
+                <img src="images/trending_now/OUR-STORY-BEGINS-Blue-House-Series-Notebook-Color-Hardcover-Notebook-32K-A5-Fresh-Beautiful-1PCS_300x.jpg" alt="ourstorybegins_notebook">
+                <h4>'Our Story Begins' Planetary Collection Notebook</h4>
+                <p>€25.33 EUR €18.57 EUR</p>
+            </article>
+            <article>
+                <img src="images/trending_now/2_9ec899a1-399d-449c-a5a1-7fd2b3dba521_300x.jpg" alt="pencil_case_winter">
+                <h4>Tsuki Pop-up Pencil Case 'Winter Edition'</h4>
+                <p>€18.57 EUR €16.88 EUR</p>
+            </article>
+            <article>
+                <img src="images/trending_now/Tuladuo-Brand-Women-Kanken-Backpack-Printing-Bags-for-Women-2018-Big-Laptop-Backapck-for-College-Student_58b151a9-8ba4-40bf-a2b6-79742d5.jpg" alt="backpack_kawaii">
+                <h4>Kawaii Face Pastel Backpack</h4>
+                <p>€24.49 EUR €21.95 EUR</p>
+            </article>
+            <article>
+                <img src="images/trending_now/product-image-507206792_1024x1024_d38994bd-6d9f-4eb1-a264-0cb0dcab7da6_300x.jpg" alt="calligraphy_pens">
+                <h4>3 set - Japanese Calligraphy Pens</h4>
+                <p>€11.81 EUR €9.28 EUR</p>
+            </article>
+            <article>
+                <img src="images/trending_now/750-min_300x.jpg" alt="nara_bulletjournal">
+                <h4>Tsuki 'Nara' Limited Edition Bullet Journal</h4>
+                <p>€24.49 EUR</p>
+            </article>
+            <article>
+                <img src="images/trending_now/900ml-Healthy-Material-Lunch-Box-3-Layer-Wheat-Straw-Bento-Boxes-Microwave-Dinnerware-Food-Storage-Container_2073cd7f-998a-4b63-995d-4ac5d3.jpg" alt="lunch_box">
+                <h4>3 Layer Bento Lunch Box</h4>
+                <p>€17.73 EUR €16.88 EUR</p>
+            </article>
+            <h3>Show more</h3>
+        </section>
+        <section>
+            
+        </section>
+        <section>
+             <h3>2020 picks</h3>
+            <article>
+                <img src="images/2020_picks/product-image-476618778_300x.jpg" alt="mildliner_highlighters">
+                <h4>Zebra Mildliner Double Ended Highlighter</h4>
+                <p>€18.57 EUR €15.19 EUR</p>
+            </article>
+            <article>
+                <img src="images/2020_picks/Large-Capacity-Pen-Pencil-Bag-Multifunction-Pencil-Case-Bag-Storage-Organizer-Pencil-Case-21cm-x-11cm_ee29dcca-9d4c-4d77-9a94.jpg" alt="stationery_organiser">
+                <h4>Little Character Stationery Organiser</h4>
+                <p>€16.04 EUR €12.66 EUR</p>
+            </article>
+            <article>
+                <img src="images/2020_picks/Creative-agenda-romance-cherry-blossom-notebook-illustration-grid-hand-painted-school-diary-office-supplies-files_300x.jpg" alt="blossom_notebook">
+                <h4>Romantic Cherry Blossom Notebook</h4>
+                <p>€24.49 EUR €21.95 EUR</p>
+            </article>
+            <article>
+                <img src="images/2020_picks/100-Colors-Dual-Brush-Art-Markers-Pen-Fine-Tip-and-Brush-Tip-Great-for-Bullet-Journal_c54f12ae-e0e7-43ab-9959-47e32e7e9097_30.jpg" alt="dual_brush_pens">
+                <h4>Dual Brush Pens - Sets of 12/24/36/48/100</h4>
+                <p>€16.88 EUR €14.35 EUR</p>
+            </article>
+            <article>
+                <img src="images/2020_picks/12-Pcs-lot-Gel-Pen-0-5mm-colour-Ink-Pen-Maker-Pen-School-Office-Supply-MUJI_300x.jpg" alt="muji_gel_pens">
+                <h4>MUJI style Gel Pens - Set of 12</h4>
+                <p>€18.58 EUR €16.05 EUR</p>
+            </article>
+            <article>
+                <img src="images/2020_picks/product-image-394831620_300x.jpg" alt="watercolour_brushpens">
+                <h4>Watercolour Brush Pens - Set of 20</h4>
+                <p>€35.48 EUR €27.87 EUR</p>
+            </article>
+            <article>
+                <img src="images/2020_picks/4pcs-set-Cute-Gel-Pens-Sakura-powder-mint-green-Pen-Kawaii-Ballpoint-School-Canetas-Boligrafos-Gift_300x.jpg" alt="sakura_petals_set">
+                <h4>Sakura Petals Set - 4 Pens + Case Included!</h4>
+                <p>€12.67 EUR €11.81 EUR</p>
+            </article>
+            <article>
+                <img src="images/2020_picks/product-image-326413417_300x.jpg" alt="gradient_sticky_memo_notes">
+                <h4>Gradient Sticky Memo Notes</h4>
+                <p>€10.97 EUR €8.43 EUR</p>
+            </article>
+            <article>
+                <img src="images/2020_picks/Happy-Half-Avocado-Family-Plush-Toy-Shy-Figured-Baby-Green-Fruit-Plant-Plushie-Squishy-Toys-Props_300x.jpg" alt="happy_avocado_plushie">
+                <h4>Happy Avocado Plushie</h4>
+                <p>€25.33 EUR 21.95 EUR</p>
+            </article>
+            <article>
+                <img src="images/2020_picks/Penguin-poodle-sheep-embroidery-Corduroy-phone-case-For-iphone-X-XR-XS-XS-Max-Hard-phone_300x.jpg" alt="cheeky_cord_iphone_case">
+                <h4>Cheeky Cord iPhone Case</h4>
+                <p>€14.35 EUR €12.66 EUR</p>
+            </article>
+            <article>
+                <img src="images/2020_picks/Cartoon-Panda-Cats-Shark-Cable-Protector-Data-Line-Cord-Protector-Protective-Cable-Winder-Cover-For-iPhone_300x.jpg" alt="animal_cord_protector">
+                <h4>Hungry Animals Cord Protector</h4>
+                <p>€7.60 EUR €6.74 EUR</p>
+            </article>
+            <article>
+                <img src="images/2020_picks/Domikee-2019-candy-school-wall-calendar-time-planner-paper-pad-stationery-21-days-planner-monthly-planner_d15eaa29-9ac0-4744-.jpg" alt="wall_planner_stickers">
+                <h4>Sakura Habits Wall Planner + Stickers</h4>
+                <p>€16.88 EUR €9.28 EUR</p>
+            </article>
+        </section>
+        <section>
+            
+        </section>
+        <section>
+            <h3>shop by collection</h3>
+        </section>
+    </main>
+    <footer>
+
+    </footer>
+    <script src="scripts/script.js"></script>
+</body></html>
