--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </nav>
     <main>
         <!--Trending now-->
-        
+        <h2>Trending Now</h2>
         <section>
 
             <div class="itemscontainer">
