--- a/index.html
+++ b/index.html
@@ -16,19 +16,53 @@
 <body>
     <header>
         <h1>Notebook Therapy</h1>
+        <nav class="hamburgernavigatie">
+            <h2 class="hamburgericon" role="button">Menu</h2>
+            <ul>
+                <li>top selling</li>
+                <li>newest additions</li>
+                <li>trending</li>
+                <li>bullet journal</li>
+                <li>tsuki collection</li>
+                <li>bags</li>
+                <li>gifts</li>
+            </ul>
+            <ul>
+                <li>
+                    <h3 class="nav_category">Browse by Catergory</h3>
+                </li>
+                <li>Notebooks</li>
+                <li>Tote Bags</li>
+                <li>Pens</li>
+                <li>Pencil Cases</li>
+                <li>Stickers</li>
+                <li>Backpacks</li>
+                <li>Plushies</li>
+                <li>Phone Cases</li>
+                <li>Diffusers</li>
+                <li>Desk Accessories</li>
+                <li>Washi Tape</li>
+                <li>Pins</li>
+                <li>Stamps</li>
+                <li>Sticky Notes</li>
+                <li>Tsuki Collection</li>
+                <li>Accessories</li>
+                <li>Search</li>
+            </ul>
+            <ul>
+                <li>
+                    <h3 class="nav_category">Customer Info</h3>
+                </li>
+                <li>Blog</li>
+                <li>About us</li>
+                <li>Shipping &amp; Returns</li>
+                <li>Common Questions</li>
+                <li>Customer Reviews</li>
+                <li>Blogger or Influencer?</li>
+                <li>Contact Us</li>
+            </ul>
+        </nav>
     </header>
-    <nav>
-        <ul>
-            <li>all categories</li>
-            <li>top selling</li>
-            <li>newest additions</li>
-            <li>trending</li>
-            <li>bullet journal</li>
-            <li>tsuki collection</li>
-            <li>bags</li>
-            <li>gifts</li>
-        </ul>
-    </nav>
     <main>
         <!--Trending now-->
         <h2>Trending Now</h2>
@@ -131,7 +165,7 @@
             </div>
         </section>
         <!--2020 Picks-->
-                    <h2>2020 picks</h2>
+        <h2>2020 picks</h2>
         <section>
 
             <div class="itemscontainer">
@@ -227,7 +261,7 @@
         <!--Collections-->
         <h2>shop by collection</h2>
         <section class="collection">
-            
+
             <a>
                 <article>
                     <img src="images/collections/OUR-STORY-BEGINS-Blue-House-Series-Notebook-Color-Hardcover-Notebook-32K-A5-Fresh-Beautiful-1PCS_1024x1024-2_300X_crop_center.jpg" alt="ourstorybegins_notebook">
@@ -297,6 +331,6 @@
 
     </footer>
     <script src="scripts/script.js"></script>
-</body></html>
+</body>
 
-
+</html>
