--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 
 <body>
     <header>
-        <h1>Notebook Therapy</h1>
-        <nav class="hamburgernavigatie">
-            <h2 class="hamburgericon" role="button">Menu</h2>
+        <img src="images/boringlonggrey_300x.png" class="headerimg" alt="Notebook Therapy">
+        <button class="ham"></button>
+        <nav class="navbar">
             <ul>
                 <li>top selling</li>
                 <li>newest additions</li>
@@ -29,7 +29,7 @@
             </ul>
             <ul>
                 <li>
-                    <h3 class="nav_category">Browse by Catergory</h3>
+                    <h3>Browse by Catergory</h3>
                 </li>
                 <li>Notebooks</li>
                 <li>Tote Bags</li>
@@ -51,7 +51,7 @@
             </ul>
             <ul>
                 <li>
-                    <h3 class="nav_category">Customer Info</h3>
+                    <h3>Customer Info</h3>
                 </li>
                 <li>Blog</li>
                 <li>About us</li>
@@ -73,14 +73,14 @@
                     <article>
                         <img src="images/trending_now/product-image-538700474_300x.jpg" alt="double_sided_highlighters">
                         <h4>Double Sided 'Mildliner' Style Highlighter - Set of 12</h4>
-                        <p>€21.11 EUR €18.57 EUR</p>
+                        <p> <span>€21.11 EUR </span> €18.57 EUR</p>
                     </article>
                 </a>
                 <a>
                     <article>
                         <img src="images/trending_now/main_300x.jpg" alt="pencil_case">
                         <h4>Tsuki Pop-up Pencil Case</h4>
-                        <p>€18.57 EUR €16.88 EUR</p>
+                        <p><span>€18.57 EUR</span> €16.88 EUR</p>
                     </article>
                 </a>
                 <a>
@@ -101,7 +101,7 @@
                     <article>
                         <img src="images/trending_now/d1e57ac3375c0ca5181c91d343e7d747_300x.png" alt="cord_tote_bag">
                         <h4>Cord Tote Bag</h4>
-                        <p>€28.72 EUR €20.26 EUR</p>
+                        <p><span>€28.72 EUR</span> €20.26 EUR</p>
                     </article>
                 </a>
                 <a>
@@ -115,28 +115,28 @@
                     <article>
                         <img src="images/trending_now/OUR-STORY-BEGINS-Blue-House-Series-Notebook-Color-Hardcover-Notebook-32K-A5-Fresh-Beautiful-1PCS_300x.jpg" alt="ourstorybegins_notebook">
                         <h4>'Our Story Begins' Planetary Collection Notebook</h4>
-                        <p>€25.33 EUR €18.57 EUR</p>
+                        <p><span>€25.33 EUR</span> €18.57 EUR</p>
                     </article>
                 </a>
                 <a>
                     <article>
                         <img src="images/trending_now/2_9ec899a1-399d-449c-a5a1-7fd2b3dba521_300x.jpg" alt="pencil_case_winter">
                         <h4>Tsuki Pop-up Pencil Case 'Winter Edition'</h4>
-                        <p>€18.57 EUR €16.88 EUR</p>
+                        <p><span>€18.57 EUR</span> €16.88 EUR</p>
                     </article>
                 </a>
                 <a>
                     <article>
                         <img src="images/trending_now/Tuladuo-Brand-Women-Kanken-Backpack-Printing-Bags-for-Women-2018-Big-Laptop-Backapck-for-College-Student_58b151a9-8ba4-40bf-a2b6-79742d5.jpg" alt="backpack_kawaii">
                         <h4>Kawaii Face Pastel Backpack</h4>
-                        <p>€24.49 EUR €21.95 EUR</p>
+                        <p><span>€24.49 EUR</span> €21.95 EUR</p>
                     </article>
                 </a>
                 <a>
                     <article>
                         <img src="images/trending_now/product-image-507206792_1024x1024_d38994bd-6d9f-4eb1-a264-0cb0dcab7da6_300x.jpg" alt="calligraphy_pens">
                         <h4>3 set - Japanese Calligraphy Pens</h4>
-                        <p>€11.81 EUR €9.28 EUR</p>
+                        <p><span>€11.81 EUR</span> €9.28 EUR</p>
                     </article>
                 </a>
                 <a>
@@ -150,7 +150,7 @@
                     <article>
                         <img src="images/trending_now/900ml-Healthy-Material-Lunch-Box-3-Layer-Wheat-Straw-Bento-Boxes-Microwave-Dinnerware-Food-Storage-Container_2073cd7f-998a-4b63-995d-4ac5d3.jpg" alt="lunch_box">
                         <h4>3 Layer Bento Lunch Box</h4>
-                        <p>€17.73 EUR €16.88 EUR</p>
+                        <p><span>€17.73 EUR</span> €16.88 EUR</p>
                     </article>
                 </a>
             </div>
@@ -330,7 +330,5 @@
     <footer>
 
     </footer>
-    <script src="scripts/script.js"></script>
-</body>
-
-</html>
+    <script type="text/javascript" src="scripts/script.js"></script>
+</body></html>
