--- a/index.html
+++ b/index.html
@@ -15,146 +15,153 @@
 
 <body>
     <header>
-        <img src="images/boringlonggrey_300x.png" class="headerimg" alt="Notebook Therapy">
-        <button class="ham"></button>
-        <nav class="navbar">
-            <ul>
-                <li>top selling</li>
-                <li>newest additions</li>
-                <li>trending</li>
-                <li>bullet journal</li>
-                <li>tsuki collection</li>
-                <li>bags</li>
-                <li>gifts</li>
-            </ul>
-            <ul>
-                <li>
-                    <h3>Browse by Catergory</h3>
-                </li>
-                <li>Notebooks</li>
-                <li>Tote Bags</li>
-                <li>Pens</li>
-                <li>Pencil Cases</li>
-                <li>Stickers</li>
-                <li>Backpacks</li>
-                <li>Plushies</li>
-                <li>Phone Cases</li>
-                <li>Diffusers</li>
-                <li>Desk Accessories</li>
-                <li>Washi Tape</li>
-                <li>Pins</li>
-                <li>Stamps</li>
-                <li>Sticky Notes</li>
-                <li>Tsuki Collection</li>
-                <li>Accessories</li>
-                <li>Search</li>
-            </ul>
-            <ul>
-                <li>
-                    <h3>Customer Info</h3>
-                </li>
-                <li>Blog</li>
-                <li>About us</li>
-                <li>Shipping &amp; Returns</li>
-                <li>Common Questions</li>
-                <li>Customer Reviews</li>
-                <li>Blogger or Influencer?</li>
-                <li>Contact Us</li>
-            </ul>
-        </nav>
+        <section>
+            <h2>shipping free worldwide as usual</h2>
+        </section>
+        <section>
+            <button><img src="images/iconen/menu.png"></button>
+            <nav>
+                <ul>
+                    <li>top selling</li>
+                    <li>newest additions</li>
+                    <li>trending</li>
+                    <li>bullet journal</li>
+                    <li>tsuki collection</li>
+                    <li>bags</li>
+                    <li>gifts</li>
+                </ul>
+                <ul>
+                    <li>
+                        <h3>Browse by Catergory</h3>
+                    </li>
+                    <li>Notebooks</li>
+                    <li>Tote Bags</li>
+                    <li>Pens</li>
+                    <li>Pencil Cases</li>
+                    <li>Stickers</li>
+                    <li>Backpacks</li>
+                    <li>Plushies</li>
+                    <li>Phone Cases</li>
+                    <li>Diffusers</li>
+                    <li>Desk Accessories</li>
+                    <li>Washi Tape</li>
+                    <li>Pins</li>
+                    <li>Stamps</li>
+                    <li>Sticky Notes</li>
+                    <li>Tsuki Collection</li>
+                    <li>Accessories</li>
+                    <li>Search</li>
+                </ul>
+                <ul>
+                    <li>
+                        <h3>Customer Info</h3>
+                    </li>
+                    <li>Blog</li>
+                    <li>About us</li>
+                    <li>Shipping &amp; Returns</li>
+                    <li>Common Questions</li>
+                    <li>Customer Reviews</li>
+                    <li>Blogger or Influencer?</li>
+                    <li>Contact Us</li>
+                </ul>
+            </nav>
+            <a><img src="images/boringlonggrey_300x.png" class="headerimg" alt="Notebook Therapy" alt="go to homepage"></a>
+            <a><button class="basket">Mandje</button></a>
+        </section>
+        <section>
+            <img src="images/header_img/headerlogo.png" alt="header img">
+            <img src="images/header_img/headerimg.jpg" alt="headerimg">
+        </section>
     </header>
     <main>
         <!--Trending now-->
-        <h2>Trending Now</h2>
+        <h2><span>Trending Now</span></h2>
         <section>
-
-            <div class="itemscontainer">
-                <a>
-                    <article>
-                        <img src="images/trending_now/product-image-538700474_300x.jpg" alt="double_sided_highlighters">
-                        <h4>Double Sided 'Mildliner' Style Highlighter - Set of 12</h4>
-                        <p> <span>€21.11 EUR </span> €18.57 EUR</p>
-                    </article>
-                </a>
-                <a>
-                    <article>
-                        <img src="images/trending_now/main_300x.jpg" alt="pencil_case">
-                        <h4>Tsuki Pop-up Pencil Case</h4>
-                        <p><span>€18.57 EUR</span> €16.88 EUR</p>
-                    </article>
-                </a>
-                <a>
-                    <article>
-                        <img src="images/trending_now/pastelproduct-crop1_300x.png" alt="pastel_bulletjournal">
-                        <h4>Tsuki 'Pastel Edition' Bullet Journal</h4>
-                        <p>€19.42 EUR</p>
-                    </article>
-                </a>
-                <a>
-                    <article>
-                        <img src="images/trending_now/stamp1-min_300x.jpg" alt="stamp_set">
-                        <h4>Tsuki Bullet Journal Tracking Stamp Set</h4>
-                        <p>€32.09 EUR</p>
-                    </article>
-                </a>
-                <a>
-                    <article>
-                        <img src="images/trending_now/d1e57ac3375c0ca5181c91d343e7d747_300x.png" alt="cord_tote_bag">
-                        <h4>Cord Tote Bag</h4>
-                        <p><span>€28.72 EUR</span> €20.26 EUR</p>
-                    </article>
-                </a>
-                <a>
-                    <article>
-                        <img src="images/trending_now/moonflower12-1_300x.png" alt="moonflower_bulletjournal">
-                        <h4>Tsuki 'Moonflower' Limited Edition Luxury Bullet Journal</h4>
-                        <p>€24.49 EUR</p>
-                    </article>
-                </a>
-                <a>
-                    <article>
-                        <img src="images/trending_now/OUR-STORY-BEGINS-Blue-House-Series-Notebook-Color-Hardcover-Notebook-32K-A5-Fresh-Beautiful-1PCS_300x.jpg" alt="ourstorybegins_notebook">
-                        <h4>'Our Story Begins' Planetary Collection Notebook</h4>
-                        <p><span>€25.33 EUR</span> €18.57 EUR</p>
-                    </article>
-                </a>
-                <a>
-                    <article>
-                        <img src="images/trending_now/2_9ec899a1-399d-449c-a5a1-7fd2b3dba521_300x.jpg" alt="pencil_case_winter">
-                        <h4>Tsuki Pop-up Pencil Case 'Winter Edition'</h4>
-                        <p><span>€18.57 EUR</span> €16.88 EUR</p>
-                    </article>
-                </a>
-                <a>
-                    <article>
-                        <img src="images/trending_now/Tuladuo-Brand-Women-Kanken-Backpack-Printing-Bags-for-Women-2018-Big-Laptop-Backapck-for-College-Student_58b151a9-8ba4-40bf-a2b6-79742d5.jpg" alt="backpack_kawaii">
-                        <h4>Kawaii Face Pastel Backpack</h4>
-                        <p><span>€24.49 EUR</span> €21.95 EUR</p>
-                    </article>
-                </a>
-                <a>
-                    <article>
-                        <img src="images/trending_now/product-image-507206792_1024x1024_d38994bd-6d9f-4eb1-a264-0cb0dcab7da6_300x.jpg" alt="calligraphy_pens">
-                        <h4>3 set - Japanese Calligraphy Pens</h4>
-                        <p><span>€11.81 EUR</span> €9.28 EUR</p>
-                    </article>
-                </a>
-                <a>
-                    <article>
-                        <img src="images/trending_now/750-min_300x.jpg" alt="nara_bulletjournal">
-                        <h4>Tsuki 'Nara' Limited Edition Bullet Journal</h4>
-                        <p>€24.49 EUR</p>
-                    </article>
-                </a>
-                <a>
-                    <article>
-                        <img src="images/trending_now/900ml-Healthy-Material-Lunch-Box-3-Layer-Wheat-Straw-Bento-Boxes-Microwave-Dinnerware-Food-Storage-Container_2073cd7f-998a-4b63-995d-4ac5d3.jpg" alt="lunch_box">
-                        <h4>3 Layer Bento Lunch Box</h4>
-                        <p><span>€17.73 EUR</span> €16.88 EUR</p>
-                    </article>
-                </a>
-            </div>
-            <h3>Show more</h3>
+            <a>
+                <article>
+                    <img src="images/trending_now/product-image-538700474_300x.jpg" alt="double_sided_highlighters">
+                    <h4>Double Sided 'Mildliner' Style Highlighter - Set of 12</h4>
+                    <p> <span class="oldprice">€21.11 EUR </span> €18.57 EUR</p>
+                </article>
+            </a>
+            <a>
+                <article>
+                    <img src="images/trending_now/main_300x.jpg" alt="pencil_case">
+                    <h4>Tsuki Pop-up Pencil Case</h4>
+                    <p><span class="oldprice">€18.57 EUR</span> €16.88 EUR</p>
+                </article>
+            </a>
+            <a>
+                <article>
+                    <img src="images/trending_now/pastelproduct-crop1_300x.png" alt="pastel_bulletjournal">
+                    <h4>Tsuki 'Pastel Edition' Bullet Journal</h4>
+                    <p>€19.42 EUR</p>
+                </article>
+            </a>
+            <a>
+                <article>
+                    <img src="images/trending_now/stamp1-min_300x.jpg" alt="stamp_set">
+                    <h4>Tsuki Bullet Journal Tracking Stamp Set</h4>
+                    <p>€32.09 EUR</p>
+                </article>
+            </a>
+            <a>
+                <article>
+                    <img src="images/trending_now/d1e57ac3375c0ca5181c91d343e7d747_300x.png" alt="cord_tote_bag">
+                    <h4>Cord Tote Bag</h4>
+                    <p><span class="oldprice">€28.72 EUR</span> €20.26 EUR</p>
+                </article>
+            </a>
+            <a>
+                <article>
+                    <img src="images/trending_now/moonflower12-1_300x.png" alt="moonflower_bulletjournal">
+                    <h4>Tsuki 'Moonflower' Limited Edition Luxury Bullet Journal</h4>
+                    <p>€24.49 EUR</p>
+                </article>
+            </a>
+            <a>
+                <article>
+                    <img src="images/trending_now/OUR-STORY-BEGINS-Blue-House-Series-Notebook-Color-Hardcover-Notebook-32K-A5-Fresh-Beautiful-1PCS_300x.jpg" alt="ourstorybegins_notebook">
+                    <h4>'Our Story Begins' Planetary Collection Notebook</h4>
+                    <p><span class="oldprice">€25.33 EUR</span> €18.57 EUR</p>
+                </article>
+            </a>
+            <a>
+                <article>
+                    <img src="images/trending_now/2_9ec899a1-399d-449c-a5a1-7fd2b3dba521_300x.jpg" alt="pencil_case_winter">
+                    <h4>Tsuki Pop-up Pencil Case 'Winter Edition'</h4>
+                    <p><span class="oldprice">€18.57 EUR</span> €16.88 EUR</p>
+                </article>
+            </a>
+            <a>
+                <article>
+                    <img src="images/trending_now/Tuladuo-Brand-Women-Kanken-Backpack-Printing-Bags-for-Women-2018-Big-Laptop-Backapck-for-College-Student_58b151a9-8ba4-40bf-a2b6-79742d5.jpg" alt="backpack_kawaii">
+                    <h4>Kawaii Face Pastel Backpack</h4>
+                    <p><span class="oldprice">€24.49 EUR</span> €21.95 EUR</p>
+                </article>
+            </a>
+            <a>
+                <article>
+                    <img src="images/trending_now/product-image-507206792_1024x1024_d38994bd-6d9f-4eb1-a264-0cb0dcab7da6_300x.jpg" alt="calligraphy_pens">
+                    <h4>3 set - Japanese Calligraphy Pens</h4>
+                    <p><span class="oldprice">€11.81 EUR</span> €9.28 EUR</p>
+                </article>
+            </a>
+            <a>
+                <article>
+                    <img src="images/trending_now/750-min_300x.jpg" alt="nara_bulletjournal">
+                    <h4>Tsuki 'Nara' Limited Edition Bullet Journal</h4>
+                    <p>€24.49 EUR</p>
+                </article>
+            </a>
+            <a>
+                <article>
+                    <img src="images/trending_now/900ml-Healthy-Material-Lunch-Box-3-Layer-Wheat-Straw-Bento-Boxes-Microwave-Dinnerware-Food-Storage-Container_2073cd7f-998a-4b63-995d-4ac5d3.jpg" alt="lunch_box">
+                    <h4>3 Layer Bento Lunch Box</h4>
+                    <p><span class="oldprice">€17.73 EUR</span> €16.88 EUR</p>
+                </article>
+            </a>
+            <h3><button>Show more</button></h3>
         </section>
         <section>
             <h2>Join 1 million+ followers on Instagram</h2>
@@ -164,11 +171,20 @@
                 </div>
             </div>
         </section>
-        <!--2020 Picks-->
-        <h2>2020 picks</h2>
+        <!--Slideshow-->
         <section>
-
-            <div class="itemscontainer">
+            <article>
+                <ol>
+                    <li><img src="images/slider/1_2ca86cdc-679c-480e-888b-b125909f5b10_600x.png" alt="instagram1"></li>
+                    <li><img src="images/slider/2_600x.png" alt="instagram1"></li>
+                    <li><img src="images/slider/3_600x.png" alt="instagram1"></li>
+                    <li><img src="images/slider/4_600x.png" alt="instagram1"></li>
+                </ol>
+            </article>
+        </section>
+        <!--2020 Picks-->
+        <h2><span>2020 picks</span></h2>
+        <section>
                 <a>
                     <article>
                         <img src="images/2020_picks/product-image-476618778_300x.jpg" alt="mildliner_highlighters">
@@ -253,15 +269,13 @@
                         <p>€16.88 EUR €9.28 EUR</p>
                     </article>
                 </a>
-            </div>
         </section>
         <section>
 
         </section>
         <!--Collections-->
-        <h2>shop by collection</h2>
-        <section class="collection">
-
+        <h2><span>shop by collection</span></h2>
+        <section>
             <a>
                 <article>
                     <img src="images/collections/OUR-STORY-BEGINS-Blue-House-Series-Notebook-Color-Hardcover-Notebook-32K-A5-Fresh-Beautiful-1PCS_1024x1024-2_300X_crop_center.jpg" alt="ourstorybegins_notebook">
@@ -299,19 +313,21 @@
                 </article>
             </a>
             <a>
-                <ul>
-                    <li>Top Selling</li>
-                    <li>Trending</li>
-                    <li>New Additions</li>
-                    <li>Pens</li>
-                    <li>Stickers</li>
-                    <li>Plushies</li>
-                    <li>Pencil Cases</li>
-                    <li>Notebooks</li>
-                    <li>Washi Tape</li>
-                    <li>Sticky Notes</li>
-                    <li>Bags</li>
-                    <li>Accessories</li>
+                <ul class="categories">
+                    <div class="categoriesli">
+                        <li>Top Selling</li>
+                        <li>Trending</li>
+                        <li>New Additions</li>
+                        <li>Pens</li>
+                        <li>Stickers</li>
+                        <li>Plushies</li>
+                        <li>Pencil Cases</li>
+                        <li>Notebooks</li>
+                        <li>Washi Tape</li>
+                        <li>Sticky Notes</li>
+                        <li>Bags</li>
+                        <li>Accessories</li>
+                    </div>
                 </ul>
             </a>
         </section>
@@ -328,7 +344,8 @@
         </section>
     </main>
     <footer>
-
+        <h3>Info</h3>
+        <h3>shop</h3>
     </footer>
     <script type="text/javascript" src="scripts/script.js"></script>
 </body></html>
