--- a/tweedepagina.html
+++ b/tweedepagina.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <head>
     <meta charset="UTF-8">
     <meta name="author" content="jouw naam">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -13,8 +12,60 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
 
-</head>
 <body>
-    
-</body>
-</html>
+        <header>
+        <section>
+            <h2>shipping free worldwide as usual</h2>
+        </section>
+        <section>
+            <nav>
+                <button><img src="images/iconen/menu.png" alt="menu"></button>
+                    <ul>
+                        <li>top selling</li>
+                        <li>newest additions</li>
+                        <li>trending</li>
+                        <li>bullet journal</li>
+                        <li>tsuki collection</li>
+                        <li>bags</li>
+                        <li>gifts</li>
+                    </ul>
+                    <ul>
+                        <li>
+                            <h3>Browse by Catergory</h3>
+                        </li>
+                        <li>Notebooks</li>
+                        <li>Tote Bags</li>
+                        <li>Pens</li>
+                        <li>Pencil Cases</li>
+                        <li>Stickers</li>
+                        <li>Backpacks</li>
+                        <li>Plushies</li>
+                        <li>Phone Cases</li>
+                        <li>Diffusers</li>
+                        <li>Desk Accessories</li>
+                        <li>Washi Tape</li>
+                        <li>Pins</li>
+                        <li>Stamps</li>
+                        <li>Sticky Notes</li>
+                        <li>Tsuki Collection</li>
+                        <li>Accessories</li>
+                        <li>Search</li>
+                    </ul>
+                    <ul>
+                        <li>
+                            <h3>Customer Info</h3>
+                        </li>
+                        <li>Blog</li>
+                        <li>About us</li>
+                        <li>Shipping &amp; Returns</li>
+                        <li>Common Questions</li>
+                        <li>Customer Reviews</li>
+                        <li>Blogger or Influencer?</li>
+                        <li>Contact Us</li>
+                    </ul>
+            </nav>
+            <a><img src="images/boringlonggrey_300x.png" class="headerimg" alt="Notebook Therapy" alt="go to homepage"></a>
+            <a><button class="basket">Mandje</button></a>
+        </section>
+    </header>
+</body></html>
